[package]
name = "anbamap-be"
version = "1.0.0"
edition = "2021"

[dependencies]
async-compression = { version = "0.4.10", features = ["all"] }
async-std = "1.12.0"
chrono = "0.4"
dotenv = "0.15.0"
futures = "0.3.30"
once_cell = "1.19.0"
openssl = { version = "0.10", features = ["vendored"] }
rayon = "1.10.0"
redis = { version = "0.25.3", features = ["tls-native-tls"] }
reqwest = { version = "0.12.4", features = ["blocking", "json", "stream"] }
scraper = "0.19.0"
sentry = "0.33.0"
sentry-tracing = "0.33.0"
serde_json = "1.0"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "sqlite",
    "tls-rustls",
] }
tokio = { version = "1.37", features = ["full"] }
tokio-stream = "0.1.15"
tracing = "0.1"
tracing-subscriber = "0.3.18"
unidecode = "0.3.0"
wikitext_table_parser = "0.2.4"
zip = "2.1.0"
