[package]
name = "anbamap-scraper"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-std = "1.12.0"
async_zip = { version = "0.0.17", features = ["full"] }
chrono = "0.4"
itertools = "0.13.0"
once_cell = "1.19.0"
rayon = "1.10.0"
regex = "1.5.4"
reqwest = { version = "0.12.4", features = ["stream", "json"] }
scraper = "0.19.0"
serde_json = "1.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.37", features = ["full"] }
tokio-stream = "0.1.15"
tracing = "0.1"
tracing-subscriber = "0.3.18"
unidecode = "0.3.0"
url = "2.2.2"
wikitext_table_parser = "0.2.4"
